--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -20,3 +20,11 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/lib/pq"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.2.2"
