--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ services:
   - docker
 
 before_install:
+- docker-compose pull
 - docker-compose build
 - docker-compose up -d db
 - docker-compose run app gom init
