--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,11 @@
 [[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.6.2"
+
+[[constraint]]
+  name = "github.com/golang/mock"
+  version = "1.1.1"
+
+[[constraint]]
+  branch = "master"
+  name = "golang.org/x/crypto"
